Refactor: simplify Makefile targets, rename projects, and ensure consistent `javaOptions` configuration with `fork` enabled.